# tfg_ws

./: .gitignore  .gitmodules  init_submodules.sh
TMC5160/: CMakeLists.txt
TMC5160/include/: TMC5160_HW_Abstraction.h  gpio.h  spi.h  uart.h  user_tmc5160.h
TMC5160/src/: gpio.c  spi.c  tmc5160_api_bridge.c  uart.c  user_tmc5160.c
ds4_driver/: CMakeLists.txt
ds4_driver/nodes/: ds4_twist_node.py  ds4_twist_node_debug.py
ow_bringup/: CMakeLists.txt  package.xml
ow_bringup/launch/: ow_gazebo.launch.xml  ow_hardware.launch.py  ow_hardware_foc.launch.py  ow_operator.launch.py  ow_robot.launch.py  ow_sim.launch.py  pc_robot.launch.xml
ow_bringup/rviz/: urdf_config.rviz
ow_control/: package.xml  setup.cfg  setup.py
ow_control/ow_control/: cmd_vel_relay.py  joint_state_bridge.py  linear_ramp.py  odom_corrector.py  trajectory_controller.py
ow_description/: CMakeLists.txt  package.xml
ow_description/config/: controllers.yaml  controllers_sim.yaml  my_controllers.yaml  ps5_controller.yaml
ow_description/launch/: display.launch.xml  ow_sim.launch.py
ow_description/meshes/: Axis.stl  BodyFrame.stl  BodyWithoutWheels.stl  Esquina.stl  OmniwheelBody.stl  PerfilAluminio.stl  base.stl  omniwheel.stl  rodillo.stl
ow_description/rviz/: urdf_config.rviz
ow_description/urdf/: common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  ow.urdf.xacro  ros2_control.xacro
ow_hardware/: CMakeLists.txt  omnidrive_system.cpp  package.xml  ros2_control_ow_hardware.xml
ow_hardware/include/ow_hardware/: motor_spi_comms.hpp  omnidrive_system.hpp
ow_hardware/src/: motor_spi_comms.cpp
ow_peque_bringup/: CMakeLists.txt  package.xml
ow_peque_bringup/launch/: ow_operator.launch.py  ow_robot.launch.py  ow_sim.launch.py  trajectory_controller.launch.py
ow_peque_description/: CMakeLists.txt  package.xml
ow_peque_description/config/: controllers.yaml  controllers_sim.yaml
ow_peque_description/launch/: check_hardware.launch.py  display.launch.xml  ow_digital_twin.launch.py  ow_operator.launch.py  ow_peque_sim.launch.py  ow_robot.launch.py  ow_sim_comparison.launch.py  parallel_sim.launch.py  view_robot.launch.py
ow_peque_description/meshes/: ModeloColision.stl  PiezasNaranjas.stl  RuedaOmnidireccional.stl
ow_peque_description/rviz/: urdf_config.rviz
ow_peque_description/scripts/: launch_robot.sh
ow_peque_description/urdf/: common_properties.xacro  materials.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  omniwheel.xacro  ow.urdf.xacro  ros2_control.xacro
ow_peque_description/worlds/: empty_realtime.sdf  maze.sdf  obstacles.sdf
ow_tmc5160/: CMakeLists.txt  package.xml
tmc4361a_driver/: CMakeLists.txt  package.xml  tmc2130_ros2_driver.cpp
tmc4361a_driver/include/: TMC2130.h
tmc4361a_driver/src/: tmc2130_ros2_driver.cpp
tmc4361a_driver/tmc_lib/: CMakeLists.txt
tmc4361a_driver/tmc_lib/include/: TMC2130_Constants.h  trinamic_porting.h
tmc4361a_driver/tmc_lib/src/: TMC2130.c  trinamic_porting.c
tmc5160_driver/: CMakeLists.txt  package.xml
tmc5160_driver/include/tmc5160_driver/: spi_interface.hpp  tmc5160_driver.hpp
tmc5160_driver/src/: spi_interface.cpp  tmc5160_driver.cpp  tmc5160_node.cpp
