<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmc5160_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for TMC5160 stepper motor driver</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- Add other dependencies if needed for SPI communication -->
  <build_depend>libgpiod-dev</build_depend>
  <exec_depend>libgpiod</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>